--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,6 @@
 PORT = 5000
 NODE_ENV = development
-MONGO_URI = mongodb+srv://Pluto1253:125347putyLK@vacqcluster.ilhz6.mongodb.net/VacQ?retryWrites=true&w=majority&appName=VacQCluster
+MONGO_URI = mongodb+srv://phuttiwat125347put:125347putyLK@jobfair.nm5j9yu.mongodb.net/?retryWrites=true&w=majority&appName=JobFair
 JWT_SECRET = asdfjkl;;lkjfdas
 JWT_EXPIRE = 30d
 JWT_COOKIE_EXPIRE = 30
