--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "swagger-jsdoc": "^6.0.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
